manifest/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-backend
  namespace: react
spec:
  replicas: 3
  selector:
    matchLabels:
      app: react-backend
  template:
    metadata:
      labels:
        app: react-backend
    spec:
      containers:
        - name: react-backend
          image: localhost:5001/react-backend:latest
          ports:
            - containerPort: 5050
