manifest/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
spec:
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
        - name: react-frontend
          image: localhost:5001/react-frontend:latest
          ports:
            - containerPort: 3000
