manifest/backend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-backend
spec:
  type: LoadBalancer
  selector:
    app: react-backend
  ports:
    - name: react-backend
      protocol: TCP
      port: 5050
      targetPort: 5050
