manifest/frontend-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: react
spec:
  type: NodePort
  selector:
    app: react-frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
      nodePort: 30335
